--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     </ul>
                     <span class="bonus-badge">🎁 3€ offerts</span>
                     <span class="earning-tag">💰 100-400€/an</span>
-                    <a href="#" class="platform-button site-link">S'inscrire iGraal →</a>
+                    <a href="#" class="platform-button">S'inscrire iGraal →</a>
                 </div>
 
                 <!-- Poulpeo -->
@@ -309,7 +309,7 @@
                     </ul>
                     <span class="bonus-badge">🎁 5€ offerts</span>
                     <span class="earning-tag">💰 80-300€/an</span>
-                    <a href="#" class="platform-button site-link">S'inscrire Poulpeo →</a>
+                    <a href="#" class="platform-button">S'inscrire Poulpeo →</a>
                 </div>
 
                 <!-- Ebuyclub -->
@@ -326,7 +326,7 @@
                     </ul>
                     <span class="bonus-badge">🎁 7€ offerts</span>
                     <span class="earning-tag">💰 70-250€/an</span>
-                    <a href="#" class="platform-button site-link">S'inscrire Ebuyclub →</a>
+                    <a href="#" class="platform-button">S'inscrire Ebuyclub →</a>
                 </div>
 
                 <!-- Showroomprivé -->
@@ -641,10 +641,12 @@
             // Injecter les liens pour chaque carte de plateforme
             document.querySelectorAll('.platform-card').forEach(card => {
                 const siteName = card.getAttribute('data-site');
-                const button = card.querySelector('.site-link');
+                const button = card.querySelector('.platform-button');
                 
                 if (siteName && button && LIENS[siteName]) {
                     button.href = LIENS[siteName];
+                    button.target = '_blank';
+                    button.rel = 'noopener noreferrer';
                 }
             });
 
@@ -654,17 +656,27 @@
                 donationLink.href = LIENS.paypal;
             }
 
-            console.log('%c✅ Tous les liens ont été chargés !', 'color: #2ecc71; font-weight: bold; font-size: 14px;');
-            console.log('%c📝 Pour modifier vos liens de parrainage, éditez la section LIENS en haut du code HTML', 'color: #3498db; font-size: 12px;');
+            console.log('%c✅ Tous les liens ont été chargés !', 'color: #00f5ff; font-weight: bold; font-size: 14px;');
+            console.log('%c📝 Liens actifs configurés :', 'color: #fbbf24; font-size: 12px;');
+            
+            // Afficher les liens configurés
+            Object.keys(LIENS).forEach(key => {
+                if (LIENS[key] && !LIENS[key].includes('VOTRE-LIEN')) {
+                    console.log(`  ✓ ${key}: ${LIENS[key]}`);
+                }
+            });
         });
 
         // Smooth scroll
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                const targetId = this.getAttribute('href');
+                if (targetId && targetId !== '#') {
+                    const target = document.querySelector(targetId);
+                    if (target) {
+                        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                    }
                 }
             });
         });
